--- a/config/landscape.yaml
+++ b/config/landscape.yaml
@@ -1,16 +1,13 @@
-cicd: github
+git: github
+settings:
+#  cosmos_name:
+#   realm_name:
+#   foundation_name:
 environments:
-  dev:
-    match_branch: refs/heads/main
-    stages:
-    - deploy
-    - local-test
-  sit:
-    match_branch: refs/tags/.*
-    stages:
-    - remote-test
-  prd:
-    match_branch: refs/tags/.*
-    match_event: release
-    stages:
-    - publish
+#  dev:
+#    match_branch: refs/heads/main
+#  sit:
+#    match_branch: refs/tags/.*
+#  prd:
+#    match_branch: refs/tags/.*
+#    match_event: release
