feat: fixing loading error

--- a/config/landscape.yaml
+++ b/config/landscape.yaml
@@ -12,6 +12,12 @@ environments:
 #    - local-test
 #  sit:
 #    match_branch: refs/tags/.*
+#    stages:
+#    - deploy
+#    - remote-test
 #  prd:
 #    match_branch: refs/tags/.*
 #    match_event: release
+#    stages:
+#    - deploy
+#    - publish
